...
                .fillMaxSize()
                .padding(padding)
                .padding(20.dp),
        verticalArrangement = Arrangement.spacedBy(14.dp, Alignment.CenterVertically),
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        Text("Pika")

        Button(
            onClick = { manager.dispatch(AppAction.CreateAccount) },
            modifier = Modifier.testTag(TestTags.LOGIN_CREATE_ACCOUNT),
        ) {
            Text("Create Account")
...
